--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <script src="Paper.js"></script>
       <script src="Dustbin.js"></script>
       <script src="sketch.js"></script>
+      <script src="matter.js"></script>
 
 
     </head>
